@@ -466,7 +466,6 @@ _item_del_pre_hook(Elm_Object_Item *it)
          (sd->stack->last->prev, Elm_Naviframe_Item);
 
    sd->stack = eina_inlist_remove(sd->stack, EINA_INLIST_GET(nit));
-   if (!sd->stack) elm_widget_resize_object_set(WIDGET(it), sd->dummy_edje);
 
    if (top && !sd->on_deletion) /* must raise another one */
      {
@@ -1244,10 +1243,6 @@ static void
 _elm_naviframe_smart_add(Eo *obj, void *_pd, va_list *list EINA_UNUSED)
 {
    Elm_Naviframe_Smart_Data *priv = _pd;
-   Elm_Widget_Smart_Data *wd = eo_data_get(obj, ELM_OBJ_WIDGET_CLASS);
-
-   priv->dummy_edje = wd->resize_obj =
-       edje_object_add(evas_object_evas_get(obj));
 
    eo_do_super(obj, evas_obj_smart_add());
 
@@ -1303,8 +1298,6 @@ _elm_naviframe_smart_del(Eo *obj, void *_pd, va_list *list EINA_UNUSED)
      }
 
    sd->on_deletion = EINA_FALSE;
-
-   evas_object_del(sd->dummy_edje);
 
    eo_do_super(obj, evas_obj_smart_del());
 }
@@ -1587,7 +1580,6 @@ _item_pop(Eo *obj, void *_pd, va_list *list)
          (sd->stack->last->prev, Elm_Naviframe_Item);
 
    sd->stack = eina_inlist_remove(sd->stack, EINA_INLIST_GET(it));
-   if (!sd->stack) elm_widget_resize_object_set(obj, sd->dummy_edje);
 
    if (prev_it)
      {
