@@ -89,6 +89,7 @@ Fixes:
    * Make sure private data is not NULL in elm_interface_scrollable.
    * Correctly handle failure case in _x11_notify_handler_image.
    * Don't manipulate dead memory in Eina_Inlist in elm_transit.c.
+   * Remove dummy object from elm_naviframe.
 
 Removals:
 
