@@ -802,3 +802,7 @@
 	* Make sure private data is not NULL in elm_interface_scrollable.
 	* Correctly handle failure case in _x11_notify_handler_image.
 	* Fix missuse of EINA_INLIST_FOREACH in elm_transit.c.
+
+2012-12-11  WooHyun Jung
+
+	* Remove dummy object from elm_naviframe.
